--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html lang="ru" class="body">
+<html lang="ru" class="page">
 
 <head>
   <meta charset="UTF-8">
   <title>Cat Energy</title>
 </head>
 
-<body class="page__body">
+<body class="page-body">
   <header class="page-header">
     <div class="page-header__slogan-wrapper">
       <a href="" class="page-header__logo">
@@ -85,22 +85,22 @@
         <h3 class="advantages__title">Как это работает</h3>
         <ul class="advantages__list">
           <l i class="advantages__list-item advantages__list-item--leaf">
-            <p class="advantages__desctiption">Функциональное питание
+            <p class="advantages__description">Функциональное питание
               содержит только полезные
               питательные вещества.</p>
           </l>
           <li class="advantages__list-item advantages__list-item--jar">
-            <p class="advantages__desctiption">Выпускается в виде порошка,
+            <p class="advantages__description">Выпускается в виде порошка,
               который нужно лишь залить
               кипятком и готово.</p>
           </li>
           <li class="advantages__list-item advantages__list-item--fork">
-            <p class="advantages__desctiption">Замените один-два приема
+            <p class="advantages__description">Замените один-два приема
               обычной еды на наше
               функциональное питание.</p>
           </li>
           <li class="advantages__list-item advantages__list-item--clocks">
-            <p class="advantages__desctiption">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
           </li>
         </ul>
       </div>
