added adaptive main images to index.html

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -6,7 +6,8 @@
         к сотрудничеству<br>дилеров!</p>
       <p class="contacts__text">ул. Большая<br>
         Конюшенная, д. 19/8<br>
-        Санкт-Петербург</p>
+        <span class="dividor">Санкт-Петербург</span>
+      </p>
     </div>
     <div class="page-footer__location"> </div>
     <div class="social__wrapper wrapper">
