--- a/source/index.html
+++ b/source/index.html
@@ -12,29 +12,29 @@
 <body class="page-body">
   <div class="page-header__wrapper">
     <header class="page-header">
-  <div class="page-header__inner-wrapper">
-    <div class="page-header__slogan-wrapper">
-      <a href="" class="page-header__logo">
-        <img src="img/logo-mobile.png" alt="Cat Energy" height="37" width="34">
-      </a>
-      <p class="page-header__site-name"><span class="bold">CAT</span> ENERGY</p>
-    </div>
-    <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-  </div>
-  <nav class="main-nav">
+      <div class="page-header__inner-wrapper">
+        <div class="page-header__slogan-wrapper">
+          <a href="" class="page-header__logo">
+            <img src="img/logo-mobile.png" alt="Cat Energy" height="37" width="34">
+          </a>
+          <p class="page-header__site-name"><span class="bold">CAT</span> ENERGY</p>
+        </div>
+        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      </div>
+      <nav class="main-nav">
 
-    <div class="main-nav__wrapper">
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active"><a href="">ГЛАВНАЯ</a></li>
-        <li class="site-list__item"><a href="">КАТАЛОГ ПРОДУКЦИИ</a></li>
-        <li class="site-list__item"><a href="">ПОДБОР ПРОГРАММЫ</a></li>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--active"><a href="">ГЛАВНАЯ</a></li>
+            <li class="site-list__item"><a href="">КАТАЛОГ ПРОДУКЦИИ</a></li>
+            <li class="site-list__item"><a href="">ПОДБОР ПРОГРАММЫ</a></li>
 
-      </ul>
-    </div>
-  </nav>
-  
+          </ul>
+        </div>
+      </nav>
 
-</header>
+
+    </header>
 
     <section class="promo">
       <div class="promo__wrapper wrapper">
@@ -43,8 +43,13 @@
             питание для котов
           </h2>
           <p class="promo__intro">Занялся собой? Займись котом!</p>
+          <picture>
+            <source srcset="./img/index-background-desktop@1x.webp 1x, ./img/index-background-desktop@2x.webp 2x"
+              type="image/webp">
+            <img src="./img/index-background-desktop@1x.jpg" height="302px" alt="Beautiful cat on a green background"
+              srcset="./img/index-background-desktop@2x.jpg 2x">
+          </picture>
         </header>
-        <img src="" alt="Cat Energy" class="promo__image">
         <a href="" class="promo__button button">подобрать программу</a>
       </div>
 
@@ -150,40 +155,40 @@
     </section>
   </main>
   <footer class="page-footer">
-  <div class="page-footer__wrapper">
-    <h2 class="footer-title visually-hidden">cat energy</h2>
-    <div class="contacts wrapper">
-      <p class="contacts__title">приглашаем<br>
-        к сотрудничеству<br>дилеров!</p>
-      <p class="contacts__text">ул. Большая<br>
-        Конюшенная, д. 19/8<br>
-        Санкт-Петербург</p>
-    </div>
-    <div class="page-footer__location"> </div>
-    <div class="social__wrapper wrapper">
-      <div class="page-footer__social social">
-
-        <div class="social__logo">Cat Energy</div>
-        <ul class="social__list">
-          <li class="social__item"><a href="https://vk.com/" class="social__link  social__link--vk">Мы в
-              ВКонтакте</a>
-          </li>
-          <li class="social__item"><a href="https://www.instagram.com/" class="social__link social__link--inst">Мы в
-              Инстаграм</a></li>
-          <li class="social__item"><a href="https://www.facebook.com/" class="social__link social__link--fb">Мы в
-              фейсбук</a></li>
-        </ul>
-
+    <div class="page-footer__wrapper">
+      <h2 class="footer-title visually-hidden">cat energy</h2>
+      <div class="contacts wrapper">
+        <p class="contacts__title">приглашаем<br>
+          к сотрудничеству<br>дилеров!</p>
+        <p class="contacts__text">ул. Большая<br>
+          Конюшенная, д. 19/8<br>
+          Санкт-Петербург</p>
       </div>
-      <div class="page-footer__copyright">
-        <div class="page-footer__copyright-title">HTML Academy</div>
-        <!-- <img src="" alt="" class="page-footer__copyright-logo"> -->
-        <div class="page-footer__copyright-logo">5</div>
-      </div>
-    </div>
+      <div class="page-footer__location"> </div>
+      <div class="social__wrapper wrapper">
+        <div class="page-footer__social social">
 
-  </div>
-</footer>
+          <div class="social__logo">Cat Energy</div>
+          <ul class="social__list">
+            <li class="social__item"><a href="https://vk.com/" class="social__link  social__link--vk">Мы в
+                ВКонтакте</a>
+            </li>
+            <li class="social__item"><a href="https://www.instagram.com/" class="social__link social__link--inst">Мы в
+                Инстаграм</a></li>
+            <li class="social__item"><a href="https://www.facebook.com/" class="social__link social__link--fb">Мы в
+                фейсбук</a></li>
+          </ul>
+
+        </div>
+        <div class="page-footer__copyright">
+          <div class="page-footer__copyright-title">HTML Academy</div>
+          <!-- <img src="" alt="" class="page-footer__copyright-logo"> -->
+          <div class="page-footer__copyright-logo">5</div>
+        </div>
+      </div>
+
+    </div>
+  </footer>
 
 
 
