--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,11 +2,17 @@
   <div class="page-header__inner-wrapper">
     <div class="page-header__slogan-wrapper">
       <a href="" class="page-header__logo">
-        <img src="@img/logo-mobile.png" alt="Cat Energy" height="37" width="34">
+        <picture>
+          <source srcset="@img/logo-desktop.svg" media="(min-width: 1280px)">
+          <source srcset="@img/logo-tablet.svg" media="(min-width: 768px)">
+          <img src="@img/logo-mobile.svg" class="page-header__logo-img" alt="Cat Energy">
+        </picture>
       </a>
-      <p class="page-header__site-name"><span class="bold">CAT</span> ENERGY</p>
+      <img class="page-header__site-name" src="@img/logo-slogan.svg">
     </div>
-    <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+    <button class="page-header__toggle" type="button">
+      <div class="page-header__toggle__third-line"></div><span class="visually-hidden">Открыть меню</span>
+    </button>
   </div>
   <nav class="main-nav">
 
